add_library(pp6lib SHARED PP6Math.cpp PP6Math.hpp PP6Energy.cpp PP6Energy.hpp PP6Muon.cpp PP6Muon.hpp FourVector.cpp FourVector.hpp ThreeVector.hpp ThreeVector.cpp PP6MenuDay1.cpp PP6MenuDay1.hpp PP6MenuDay2.cpp PP6MenuDay2.hpp PP6MenuDay3.cpp PP6MenuDay3.hpp PP6MenuDay4.cpp PP6MenuDay4.hpp PP6Day4Muon.cpp PP6Day4Muon.hpp Particle.cpp Particle.hpp PP6ParticleInfo.cpp PP6ParticleInfo.hpp)



